--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="header-container">
 
             <nav>
-                <p class="logo">Header Logo</p>
+                <p class="logo">Sports</p>
                 <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">History</a></li>
+                    <li><a href="#">Gallery</a></li>
                 </ul>
             </nav>
     
@@ -59,7 +59,7 @@
             
             <div class="item">
                 <img src="images/pexels-todd-trapani-2339377.jpg" alt="Tennis ball">
-                <p>The first Wimbledon tournament began on July 9, 1887</p>
+                <p>The first Wimbledon tournament took place on July 9, 1887</p>
             </div>
 
             <div class="item">
@@ -79,8 +79,8 @@
         <div class="action-container">
             <section class="action">
                 <div>
-                    <h4>Call to action! It's time!</h4>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <h4>Keep up to date on sports!</h4>
+                    <p>Sign up to learn more about sports by clicking that button!</p>
                 </div>
                 <button>Sign up</button>
             </section>
